--- a/style/web-process-style.css
+++ b/style/web-process-style.css
@@ -1,21 +1,24 @@
 body {
-	width: 7500px;
+	width: 90%;
+	max-width: 42em;
 	font-family: Arial;
 	padding-left: 2em;
-	font-size: 1.2em;
-	line-height: 1.4;
-	color: #333;
+	padding-right: 2em;
+	font-size: 1.3em;
+	line-height: 1.3;
+	color: rgba(0, 0, 0, 0.7);
 }
 
 h2 {
-	padding-left:1em;
+	margin-top: 1.5em;
+	padding-top: 1em;
+	border-top: 1px solid rgba(0, 0, 0, 0.7);
 }
 
 h3 {
 	font-size: 0.9em;
 	text-transform: uppercase;
 	font-weight: normal;
-	margin-top: 0;
 }
 
 ul {
@@ -23,68 +26,29 @@ ul {
 }
 
 ul li {
-	background: url(icon_grn_box.gif) no-repeat 0 8px;
+	background: url(icon_grn_box.gif) no-repeat 0 10px;
 	padding-left: 16px;
 	margin-top: 3px;
 	margin-bottom: 3px;
 	margin-left: -30px;
 }
 
-header {
-}
-
-.intro {
-	width: 350px;
-	margin-right: 2em;
-	color: rgba(0, 0, 0, .5);
-}
-
-.stage {
-	display: inline-block;
-	margin-top: 26px;
-	min-width: 200px;
-	vertical-align: top;
-}
-
-.stage-summary, .templates, .resources {
-	width: 270px;
-	float: left;
-	padding-right: 2.2em;
-}
-
-.steps, .more-steps {
-	width: 270px;
-	margin-left: 332px;
-	min-height: 160px;
-}
-
 .stage-summary, .steps {
-	min-height: 250px;
-	padding: 0 3em;
 	margin-bottom: 1em;
 }
 
-.templates, .more-steps {
-	padding: 0.8em 3em 1em 3em;
+.steps {
+
 }
 
 ul.includes, ol.includes {
 	margin-top: 2em;
 }
 
-.clearfix {
-	clear: both;
-	width: 100%;
-	border-top: solid 2px #7c7e7f;
-}
-
 .post-stage {
-	display: inline-block;
-	margin-top: 220px;
-	padding: 1.2em 2.4em 1em 1.4em;
-	vertical-align: top;
-	background: rgba(143,136,132,0.3);
-	max-width: 190px;
+	margin-top: 2em;
+	padding: 0.8em 1.4em;
+	background: rgba(143,136,132,0.2);
 }
 
 a {
@@ -106,4 +70,8 @@ a {
 	padding-top: 0;
 	padding-left: 3em;
 	height: auto;
+}
+
+.footnote {
+	margin-top: 6em;
 }
